@@ -167,7 +167,7 @@ public class IrisBufferEnvironment implements IBufferEnvironment {
 
 		@Override
 		public IServerBuffer getImmediateMeshBuffer() {
-			return ServerMesh.Builder.BUFFERS.get(layout).getFirst();
+			return ServerMesh.Builder.BUFFERS.get(layout).get(0);
 		}
 
 		@Override
